# gouide

./: .gitignore  .lintstagedrc.json  .npmrc  .typos.toml  README.md  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.cursor/plans/: gouide_mvp_architecture_81c5c293.plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  typos.yml
.husky/: pre-commit  pre-push
apps/cli/: package.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: gouide-daemon-x86_64-unknown-linux-gnu
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/bridge/: client.rs  commands.rs  discovery.rs  lifecycle.rs  mod.rs  settings.rs  tray.rs
apps/desktop/src/components/: EditorArea.module.css  EditorArea.tsx  FileTree.module.css  FileTree.tsx  MonacoEditor.module.css  MonacoEditor.tsx  Shell.module.css  Shell.tsx  Sidebar.module.css  Sidebar.tsx  StatusBar.module.css  StatusBar.tsx
apps/desktop/src/hooks/: useDaemonConnection.tsx  useWorkspace.tsx
core/: Cargo.toml  deny.toml  rustfmt.toml
core/crates/gouide-daemon/: Cargo.toml
core/crates/gouide-daemon/src/: config.rs  lib.rs  main.rs  server.rs  shutdown.rs
core/crates/gouide-daemon/src/discovery/: lockfile.rs  mod.rs
core/crates/gouide-daemon/src/services/: control.rs  handshake.rs  mod.rs
core/crates/gouide-daemon/src/session/: manager.rs  mod.rs
core/crates/gouide-daemon/src/transport/: mod.rs  unix.rs
core/crates/gouide-protocol/: Cargo.toml  build.rs
core/crates/gouide-protocol/src/: lib.rs
core/crates/gouide-workspace/: Cargo.toml
core/crates/gouide-workspace/src/: lib.rs
docs/: README.md
protocol/: README.md  VERSIONING.md  buf.gen.yaml  buf.yaml
protocol/gouide/v1/: common.proto  editor.proto  handshake.proto  workspace.proto
scripts/: .validation-baseline.json  daemon.sh  install-deps.sh  install.sh  prepare-sidecar.sh  validate-ui-architecture.sh  verify-protocol-contract.sh
scripts/validators/: QUICK_START.md  README.md  detect-atomic-violations.sh  detect-business-logic.sh  detect-component-state.sh  detect-direct-dom.sh  detect-template-only-violations.sh  validate-story-files.sh
scripts/validators/lib/: common.sh  file-lists.sh  patterns.sh
tools/: README.md
