[workspace]
resolver = "2"
members = [
    "crates/gouide-protocol",
    "crates/gouide-daemon",
    "crates/gouide-workspace",
]

# Future members will be added here:
# members = [
#     "crates/gouide-fs",
#     "crates/gouide-index",
#     "crates/gouide-search",
#     "crates/gouide-lsp",
#     "crates/gouide-git",
# ]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/aram-devdocs/gouide"

[workspace.dependencies]
# Common dependencies
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Protocol/gRPC dependencies
prost = "0.13"
tonic = { version = "0.12", default-features = false }
tonic-build = "0.12"

# Additional daemon dependencies
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
fs4 = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
hyper = { version = "1.5", features = ["server", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-service = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_crate_dependencies = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Pedantic
pedantic = { level = "warn", priority = -1 }

# Nursery (experimental but useful)
nursery = { level = "warn", priority = -1 }

# Specific denies
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"

# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"

# Correctness (always deny - higher priority than pedantic/nursery)
correctness = { level = "deny", priority = -2 }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
