[package]
name = "gouide-desktop"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "Gouide Desktop Application"
license = "MIT"
default-run = "gouide-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

# Protocol (shared types with daemon)
gouide-protocol = { path = "../../../core/crates/gouide-protocol" }

# gRPC client
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy"] }
tower = { version = "0.5", features = ["util"] }
http = "1.1"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
