[package]
name = "gouide-desktop"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "Gouide Desktop Application"
license = "MIT"
default-run = "gouide-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

# Protocol (shared types with daemon)
gouide-protocol = { path = "../../../core/crates/gouide-protocol" }

# gRPC client
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy"] }
tower = { version = "0.5", features = ["util"] }
http = "1.1"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_crate_dependencies = "warn"
unreachable_pub = "warn"

[lints.clippy]
# Pedantic
pedantic = { level = "warn", priority = -1 }

# Nursery (experimental but useful)
nursery = { level = "warn", priority = -1 }

# Specific denies
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"

# Allow some pedantic/nursery lints that are too noisy or not yet applicable
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
uninlined_format_args = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
single_match_else = "allow"
unnecessary_wraps = "allow"
needless_pass_by_value = "allow"
redundant_clone = "allow"
match_same_arms = "allow"
use_debug = "allow"
manual_let_else = "allow"
derivable_impls = "allow"
unnecessary_debug_formatting = "allow"
option_if_let_else = "allow"

# Correctness (always deny - higher priority than pedantic/nursery)
correctness = { level = "deny", priority = -2 }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
