[package]
name = "gouide-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Gouide IDE core daemon - gRPC server over local IPC"

[[bin]]
name = "gouide-daemon"
path = "src/main.rs"

[lib]
name = "gouide_daemon"
path = "src/lib.rs"

[dependencies]
gouide-protocol = { path = "../gouide-protocol" }
gouide-workspace = { path = "../gouide-workspace" }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# gRPC/HTTP2
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
prost = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fs4 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
