[package]
name = "gouide-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Generated protocol types for Gouide daemon/client communication"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost", "transport", "channel"] }

[build-dependencies]
tonic-build = { workspace = true }
# Note: Requires protoc to be installed. Install via:
#   - Debian/Ubuntu: apt install protobuf-compiler
#   - macOS: brew install protobuf
#   - Or download from: https://github.com/protocolbuffers/protobuf/releases
